<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F8F8FB"
        tools:context=".view.SavedNewsFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBackSavedNewsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_2"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_news"
            android:textColor="@color/color_94C77D"
            android:textSize="@dimen/sp24"
            android:fontFamily="@font/source_sans_roman_semibold"
            android:letterSpacing="0.02"
            app:layout_constraintTop_toTopOf="@id/ivBackSavedNewsFragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivBackSavedNewsFragment"
            tools:ignore="UnusedAttribute"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchBarSavedNewsFragment"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp15"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/dp1"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp37"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp30"
            app:layout_constraintTop_toBottomOf="@id/ivBackSavedNewsFragment"
            app:layout_constraintLeft_toLeftOf="@id/ivBackSavedNewsFragment"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:searchIcon="@drawable/ic_search"
                app:queryHint="@string/search"
                app:queryBackground="@null"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvContainerSavedNewsFragment"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            app:cardCornerRadius="@dimen/dp15"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/dp2"
            android:visibility="gone"
            app:contentPaddingBottom="@dimen/dp20"
            android:layout_marginTop="@dimen/dp37"
            android:layout_marginBottom="@dimen/dp16"
            app:layout_constraintTop_toBottomOf="@id/cvSearchBarSavedNewsFragment"
            app:layout_constraintLeft_toLeftOf="@id/cvSearchBarSavedNewsFragment"
            app:layout_constraintRight_toRightOf="@id/cvSearchBarSavedNewsFragment"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvContainerSavedNewsFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@color/color_94C77D"
                android:scrollbarSize="@dimen/dp3"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llNewsCartSavedNewsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ivBackSavedNewsFragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp160"
                android:layout_height="@dimen/dp160"
                android:layout_gravity="center"
                android:background="@drawable/ic_cart"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_news_cart"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/sp27"
                android:fontFamily="@font/source_sans_roman"
                android:layout_marginTop="@dimen/dp10"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>